app/assets/stylesheets/static_pages.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

html {

	background: image-url('home_background.jpg') no-repeat center center fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	  -o-background-size: cover;
	  background-size: cover;
	background-color: transparent;
}
ul, li, p, a {
	font-family: 'OpenSans';
}
.navbar-default .navbar-nav li{
	a {
		font-weight: 600;
		font-size: 20px;
		color: #FFFFFF;
	}
	a:hover {
		color: #FFF;
		text-decoration: underline;
	}

}
.navbar-brand {
	padding-top: 10px;
}

div#welcome_intro {
	width: 70%;
	margin: 0 auto;
	margin-top: 10%;
	h1, h3 {
		color: #FFF;
	}
	h3 {
		font-size: 40px;
		margin-bottom: 0;
		display: none;		
	}
	h1 {
		font-weight: 700;
		font-size: 72px;
		text-decoration: underline;
		margin-top: -5px;
		display: none;
	}

}

